ENG-783 #comment Fix: fixed sidebar icons alignment

--- a/src/assets/sass/components/_sidebar.scss
+++ b/src/assets/sass/components/_sidebar.scss
@@ -166,6 +166,10 @@
 
     .sidebarNavigation__header {
       justify-content: flex-end;
+
+      &--logo {
+        min-width: 80px;
+      }
     }
     .sidebarNavigation__mainMenu {
       width: auto;
